[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Simple backend for managing personal budgets"
authors = ["Ryan Darge <ryan.darge@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "backend" },
    { include = "database" }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
pytest = "^8.3.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sqlalchemy = {extras = ["mypy"], version="^2.0.31"}
alembic = "^1.13.2"
fastapi = "^0.111.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"
black = "^24.4.2"
ruff = "^0.5.5"
mypy = "^1.11.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
